--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         const text = await response.text();
         const json = JSON.parse(text.substring(47).slice(0, -2));
         const rows = json.table.rows;
+        const query = encodeURIComponent('SELECT * OFFSET 1');
+
 
         const levelsContainer = document.getElementById('levels');
         rows.forEach(row => {
