--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </style>
 </head>
 <body>
-  <h1>My Game Level Accomplishments</h1>
+  <h1>The List</h1>
   <div id="levels"></div>
 
   <script>
