--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+      margin: 0;
       background-color: #d0e2e4;
       display: flex;
       flex-direction: column;
@@ -14,48 +15,44 @@
       padding: 20px;
     }
     h1 {
-      text-align: center;
+      margin-bottom: 20px;
+    }
+    #levels {
+      width: 100%;
+      max-width: 1000px;
     }
     .level {
-      width: 600px;
-      margin: 20px auto;
+      display: flex;
+      flex-direction: row;
       background: #fff;
       border-radius: 8px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      overflow: hidden;
+      margin-bottom: 20px;
       cursor: pointer;
-      transition: transform 0.3s ease;
+      overflow: hidden;
     }
-    .level:hover {
-      transform: scale(1.02);
+    .thumbnail {
+      width: 40%;
+      object-fit: cover;
+      aspect-ratio: 16 / 9;
     }
-    .level-header {
+    .level-content {
+      width: 60%;
       padding: 15px;
+      box-sizing: border-box;
+    }
+    .level-content h2 {
+      margin-top: 0;
     }
     .level-details {
       max-height: 0;
       overflow: hidden;
       transition: max-height 0.3s ease;
-      padding: 0 15px;
     }
     .level.expanded .level-details {
       max-height: 1000px;
-      padding: 15px;
     }
-    .thumbnail {
-      width: 100%;
-      aspect-ratio: 16 / 9;
-      object-fit: cover;
-      border-radius: 8px 8px 0 0;
-    }
-    .details {
-      padding: 15px;
-      flex: 1;
-    }
-    .details h2 {
-      margin-top: 0;
-    }
-    .details p {
+    .level-content p {
       margin: 5px 0;
     }
   </style>
@@ -83,47 +80,41 @@
 
           const levelDiv = document.createElement('div');
           levelDiv.className = 'level';
+          levelDiv.addEventListener('click', () => {
+            levelDiv.classList.toggle('expanded');
+          });
 
           const img = document.createElement('img');
           img.src = data[19];
           img.alt = data[3];
           img.className = 'thumbnail';
 
-          const headerDiv = document.createElement('div');
-          headerDiv.className = 'level-header';
-          headerDiv.innerHTML = `
+          const contentDiv = document.createElement('div');
+          contentDiv.className = 'level-content';
+          contentDiv.innerHTML = `
             <h2>#${data[1]} - ${data[3]}</h2>
             <p><strong>Creator:</strong> ${data[4]}</p>
-          `;
-
-          const detailsDiv = document.createElement('div');
-          detailsDiv.className = 'level-details';
-          detailsDiv.innerHTML = `
-            <p><strong>PGDDL:</strong> ${data[5]}</p>
-            <p><strong>GDDL:</strong> ${data[6]}</p>
-            <p><strong>PEMON:</strong> ${data[7]}</p>
-            <p><strong>Date Beat:</strong> ${data[8]}</p>
-            <p><strong>Enjoyment:</strong> ${data[9]}</p>
-            <p><strong>Level Opinion Rank:</strong> ${data[10]}</p>
-            <p><strong>Attempt Count:</strong> ${data[11]}</p>
-            <p><strong>Worst Fail:</strong> ${data[12]}</p>
-            <p><strong>Gameplay Opinion Score:</strong> ${data[13]}</p>
-            <p><strong>Deco Opinion Score:</strong> ${data[14]}</p>
-            <p><strong>Song Opinion Score:</strong> ${data[15]}</p>
-            <p><strong>Classic Mode:</strong> ${data[16]}</p>
-            <p><strong>Platformer Mode:</strong> ${data[17]}</p>
-            <p><strong>Order Beaten:</strong> ${data[18]}</p>
-            <p><strong>Level ID:</strong> ${data[20]}</p>
+            <div class="level-details">
+              <p><strong>PGDDL:</strong> ${data[5]}</p>
+              <p><strong>GDDL:</strong> ${data[6]}</p>
+              <p><strong>PEMON:</strong> ${data[7]}</p>
+              <p><strong>Date Beat:</strong> ${data[8]}</p>
+              <p><strong>Enjoyment:</strong> ${data[9]}</p>
+              <p><strong>Level Opinion Rank:</strong> ${data[10]}</p>
+              <p><strong>Attempt Count:</strong> ${data[11]}</p>
+              <p><strong>Worst Fail:</strong> ${data[12]}</p>
+              <p><strong>Gameplay Opinion Score:</strong> ${data[13]}</p>
+              <p><strong>Deco Opinion Score:</strong> ${data[14]}</p>
+              <p><strong>Song Opinion Score:</strong> ${data[15]}</p>
+              <p><strong>Classic Mode:</strong> ${data[16]}</p>
+              <p><strong>Platformer Mode:</strong> ${data[17]}</p>
+              <p><strong>Order Beaten:</strong> ${data[18]}</p>
+              <p><strong>Level ID:</strong> ${data[20]}</p>
+            </div>
           `;
 
           levelDiv.appendChild(img);
-          levelDiv.appendChild(headerDiv);
-          levelDiv.appendChild(detailsDiv);
-
-          levelDiv.addEventListener('click', () => {
-            levelDiv.classList.toggle('expanded');
-          });
-
+          levelDiv.appendChild(contentDiv);
           levelsContainer.appendChild(levelDiv);
         });
       } catch (error) {
