--- a/index.html
+++ b/index.html
@@ -7,53 +7,97 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
+      margin: 20px;
       background-color: #d0e2e4;
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      justify-content: center;
       padding: 20px;
     }
-    h1 {
-      margin-bottom: 20px;
-    }
     #levels {
-      width: 100%;
-      max-width: 1000px;
+      width: 700px;
     }
     .level {
-      display: flex;
-      flex-direction: row;
       background: #fff;
       border-radius: 8px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      margin-bottom: 20px;
-      cursor: pointer;
       overflow: hidden;
+      cursor: pointer;
+      margin-bottom: 20px;
+
+      display: flex;
+      flex-direction: row;
+      align-items: center; /* vertically center content */
+      transition: all 0.3s ease;
     }
+    /* Thumbnail styling */
     .thumbnail {
-      width: 40%;
+      width: 250px;
+      height: 140px; /* landscape ratio */
       object-fit: cover;
-      aspect-ratio: 16 / 9;
+      border-radius: 8px 0 0 8px;
+      flex-shrink: 0; /* don't shrink */
+      transition: all 0.3s ease;
     }
-    .level-content {
-      width: 60%;
-      padding: 15px;
-      box-sizing: border-box;
+    /* Text container on the right */
+    .text-container {
+      padding: 0 20px;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center; /* vertical center */
+      height: 140px;
     }
-    .level-content h2 {
-      margin-top: 0;
+    .title {
+      font-size: 1.25rem;
+      font-weight: bold;
+      margin: 0 0 6px 0;
     }
+    .creator {
+      font-size: 1rem;
+      margin: 0;
+      color: #555;
+    }
+
+    /* Details hidden by default */
     .level-details {
       max-height: 0;
       overflow: hidden;
-      transition: max-height 0.3s ease;
+      padding: 0 20px;
+      transition: max-height 0.4s ease, padding 0.4s ease;
+      font-size: 0.9rem;
+      color: #333;
+    }
+
+    /* Expanded state styles */
+    .level.expanded {
+      flex-direction: column;
+      align-items: center;
+      height: auto;
+    }
+    .level.expanded .thumbnail {
+      width: 100%;
+      height: auto;
+      border-radius: 8px 8px 0 0;
+      margin-bottom: 10px;
+    }
+    .level.expanded .text-container {
+      padding: 0 20px 10px;
+      height: auto;
+      align-items: center;
+      text-align: center;
+    }
+    .level.expanded .title {
+      font-size: 1.5rem;
+      margin-bottom: 10px;
+    }
+    .level.expanded .creator {
+      font-size: 1.1rem;
+      margin-bottom: 10px;
     }
     .level.expanded .level-details {
       max-height: 1000px;
-    }
-    .level-content p {
-      margin: 5px 0;
+      padding: 10px 20px 20px;
+      width: 100%;
     }
   </style>
 </head>
@@ -80,42 +124,50 @@
 
           const levelDiv = document.createElement('div');
           levelDiv.className = 'level';
-          levelDiv.addEventListener('click', () => {
-            levelDiv.classList.toggle('expanded');
-          });
 
           const img = document.createElement('img');
-          img.src = data[19];
-          img.alt = data[3];
+          img.src = data[19]; // Column T: Thumbnail Image URL
+          img.alt = data[3];  // Column D: Level Name
           img.className = 'thumbnail';
 
-          const contentDiv = document.createElement('div');
-          contentDiv.className = 'level-content';
-          contentDiv.innerHTML = `
-            <h2>#${data[1]} - ${data[3]}</h2>
-            <p><strong>Creator:</strong> ${data[4]}</p>
-            <div class="level-details">
-              <p><strong>PGDDL:</strong> ${data[5]}</p>
-              <p><strong>GDDL:</strong> ${data[6]}</p>
-              <p><strong>PEMON:</strong> ${data[7]}</p>
-              <p><strong>Date Beat:</strong> ${data[8]}</p>
-              <p><strong>Enjoyment:</strong> ${data[9]}</p>
-              <p><strong>Level Opinion Rank:</strong> ${data[10]}</p>
-              <p><strong>Attempt Count:</strong> ${data[11]}</p>
-              <p><strong>Worst Fail:</strong> ${data[12]}</p>
-              <p><strong>Gameplay Opinion Score:</strong> ${data[13]}</p>
-              <p><strong>Deco Opinion Score:</strong> ${data[14]}</p>
-              <p><strong>Song Opinion Score:</strong> ${data[15]}</p>
-              <p><strong>Classic Mode:</strong> ${data[16]}</p>
-              <p><strong>Platformer Mode:</strong> ${data[17]}</p>
-              <p><strong>Order Beaten:</strong> ${data[18]}</p>
-              <p><strong>Level ID:</strong> ${data[20]}</p>
-            </div>
+          // Container for title and creator (always visible)
+          const textContainer = document.createElement('div');
+          textContainer.className = 'text-container';
+          textContainer.innerHTML = `
+            <h2 class="title">#${data[1]} - ${data[3]}</h2>
+            <p class="creator">Creator: ${data[4]}</p>
+          `;
+
+          // Details container (hidden unless expanded)
+          const detailsDiv = document.createElement('div');
+          detailsDiv.className = 'level-details';
+          detailsDiv.innerHTML = `
+            <p><strong>PGDDL:</strong> ${data[5]}</p>
+            <p><strong>GDDL:</strong> ${data[6]}</p>
+            <p><strong>PEMON:</strong> ${data[7]}</p>
+            <p><strong>Date Beat:</strong> ${data[8]}</p>
+            <p><strong>Enjoyment:</strong> ${data[9]}</p>
+            <p><strong>Level Opinion Rank:</strong> ${data[10]}</p>
+            <p><strong>Attempt Count:</strong> ${data[11]}</p>
+            <p><strong>Worst Fail:</strong> ${data[12]}</p>
+            <p><strong>Gameplay Opinion Score:</strong> ${data[13]}</p>
+            <p><strong>Deco Opinion Score:</strong> ${data[14]}</p>
+            <p><strong>Song Opinion Score:</strong> ${data[15]}</p>
+            <p><strong>Classic Mode:</strong> ${data[16]}</p>
+            <p><strong>Platformer Mode:</strong> ${data[17]}</p>
+            <p><strong>Order Beaten:</strong> ${data[18]}</p>
+            <p><strong>Level ID:</strong> ${data[20]}</p>
           `;
 
           levelDiv.appendChild(img);
-          levelDiv.appendChild(contentDiv);
+          levelDiv.appendChild(textContainer);
+          levelDiv.appendChild(detailsDiv);
           levelsContainer.appendChild(levelDiv);
+
+          // Toggle expand on click
+          levelDiv.addEventListener('click', () => {
+            levelDiv.classList.toggle('expanded');
+          });
         });
       } catch (error) {
         console.error('Error fetching data:', error);
