--- a/index.html
+++ b/index.html
@@ -1,97 +1,344 @@
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-    background-color: #d0e2e4;
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-  }
-  #levels {
-    width: 650px;
-  }
-  .level {
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    margin-bottom: 20px;
-    cursor: pointer;
-    overflow: hidden;
-    transition: all 0.4s ease;
-  }
-  .level-row {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 10px 20px;
-  }
-  .thumbnail {
-    width: 250px;
-    aspect-ratio: 16 / 9;
-    object-fit: cover;
-    border-radius: 8px;
-    flex-shrink: 0;
-  }
-  .details {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-left: 20px;
-    min-width: 300px;
-  }
-  .details h2, .details p {
-    margin: 4px 0;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 100%;
-  }
-  .details p em {
-    font-style: italic;
-  }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Level List with Sorting Tabs</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #d0e2e4;
+      display: flex;
+      justify-content: center;
+      padding: 20px;
+    }
+    #container {
+      width: 650px;
+    }
+    /* Tabs container */
+    #tabs {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
+      gap: 12px;
+      flex-wrap: wrap;
+    }
+    .tab {
+      padding: 8px 14px;
+      background-color: #fff;
+      border-radius: 6px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      cursor: pointer;
+      font-weight: bold;
+      user-select: none;
+      transition: background-color 0.3s ease;
+      white-space: nowrap;
+    }
+    .tab:hover {
+      background-color: #b0c8cc;
+    }
+    .tab.active {
+      background-color: #7aaeb4;
+      color: white;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+    }
+    #levels {
+      /* container for levels */
+    }
+    .level {
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+      cursor: pointer;
+      overflow: hidden;
+      transition: all 0.4s ease;
+    }
+    .level-row {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      padding: 10px 20px;
+    }
+    .thumbnail {
+      width: 250px;
+      aspect-ratio: 16 / 9;
+      object-fit: cover;
+      border-radius: 8px;
+      flex-shrink: 0;
+    }
+    .details {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding-left: 20px;
+      min-width: 300px;
+    }
+    .details h2, .details p {
+      margin: 4px 0;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 100%;
+    }
+    .details p em {
+      font-style: italic;
+    }
 
-  .level-details {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.6s ease, padding 0.6s ease;
-    padding: 0 20px;
-  }
-  .level.expanded .level-details {
-    max-height: 1500px;
-    padding: 15px 20px 25px;
-  }
-  .expanded-title {
-    text-align: center;
-    margin: 10px 0 20px;
-  }
-  .creator-line {
-    text-align: center;
-    font-style: italic;
-    margin-bottom: 10px;
-  }
-  .info-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-    gap: 5px;
-    text-align: center;
-    margin-bottom: 10px;
-  }
-  .info-grid p {
-    margin: 0;
-  }
-  .info-header {
-    font-weight: bold;
-  }
-  .info-data {
-    font-size: 14px;
-  }
-</style>
+    .level-details {
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.6s ease, padding 0.6s ease;
+      padding: 0 20px;
+    }
+    .level.expanded .level-details {
+      max-height: 1500px;
+      padding: 15px 20px 25px;
+    }
+    .expanded-title {
+      text-align: center;
+      margin: 10px 0 20px;
+    }
+    .creator-line {
+      text-align: center;
+      font-style: italic;
+      margin-bottom: 10px;
+    }
+    .info-grid {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 5px;
+      text-align: center;
+      margin-bottom: 5px;
+    }
+    .info-grid.three-cols {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    .info-grid.two-cols {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    .info-header {
+      font-weight: bold;
+      text-align: center;
+    }
+    .info-data {
+      font-size: 14px;
+      text-align: center;
+    }
 
+    /* Centering mode block text */
+    .mode-block {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 10px;
+    }
+    .mode-block div {
+      font-weight: bold;
+      font-size: 1.1em;
+    }
+  </style>
+</head>
 <body>
-  <div id="levels"></div>
+  <div id="container">
+    <div id="tabs">
+      <div class="tab active" data-sort="rank">Rank</div>
+      <div class="tab" data-sort="enjoyment">Enjoyment</div>
+      <div class="tab" data-sort="order">Order Beaten</div>
+      <div class="tab" data-sort="gddl">GDDL</div>
+      <div class="tab" data-sort="pemon">PEMON</div>
+      <div class="tab" data-sort="worstfail">Worst Fail</div>
+    </div>
+    <div id="levels"></div>
+  </div>
 
   <script>
+    let levelsData = [];
+
+    function formatDate(dateStr) {
+      if (!dateStr) return '';
+      const match = /Date\((\d+),(\d+),(\d+)\)/.exec(dateStr);
+      if (!match) return '';
+      let year = Number(match[1]);
+      let month = Number(match[2]);
+      let day = Number(match[3]);
+      const date = new Date(year, month, day);
+      return date.toLocaleDateString('en-US', {
+        year: 'numeric',
+        month: 'long',
+        day: 'numeric',
+      });
+    }
+
+    function createInfoRow(headers, values) {
+      const valid = values.some(
+        (v) => v !== '' && v !== 'N/A' && v !== 'U' && v !== undefined && v !== null
+      );
+      if (!valid) return '';
+      let gridClass = '';
+      if (headers.length === 2) gridClass = 'two-cols';
+      else if (headers.length === 3) gridClass = 'three-cols';
+
+      const headerHTML = headers
+        .map((h) => `<div class="info-header">${h}</div>`)
+        .join('');
+      const valueHTML = values
+        .map((v) => `<div class="info-data">${v}</div>`)
+        .join('');
+      return `<div class="info-grid ${gridClass}">${headerHTML}</div><div class="info-grid ${gridClass}">${valueHTML}</div>`;
+    }
+
+    function buildLevelDiv(data) {
+      const levelDiv = document.createElement('div');
+      levelDiv.className = 'level';
+
+      const levelRow = document.createElement('div');
+      levelRow.className = 'level-row';
+
+      const img = document.createElement('img');
+      img.src = data[19] || '';
+      img.alt = data[3] || 'Level Image';
+      img.className = 'thumbnail';
+
+      const mainDetails = document.createElement('div');
+      mainDetails.className = 'details';
+
+      const rankText = `#${data[1]}`;
+      mainDetails.innerHTML = `
+        <h2 title="#${data[1]} - ${data[3]}">${rankText} - ${data[3]}</h2>
+        <p><em>by: ${data[4]}</em></p>
+      `;
+
+      levelRow.appendChild(img);
+      levelRow.appendChild(mainDetails);
+      levelDiv.appendChild(levelRow);
+
+      const extraDetails = document.createElement('div');
+      extraDetails.className = 'level-details';
+
+      let modeText = [];
+      if (
+        data[16] === true ||
+        data[16] === 'TRUE' ||
+        data[16] === 'true' ||
+        data[16] === 1
+      )
+        modeText.push('Classic Mode');
+      if (
+        data[17] === true ||
+        data[17] === 'TRUE' ||
+        data[17] === 'true' ||
+        data[17] === 1
+      )
+        modeText.push('Platformer Mode');
+
+      const modeBlock =
+        modeText.length > 0
+          ? `<div class='mode-block'><div>${modeText.join(' | ')}</div></div>`
+          : '';
+
+      const chrono =
+        data[18] !== '' && data[18] !== undefined ? `#${data[18]}` : '';
+      const dateBeat = formatDate(data[8]);
+      const worstFail = data[12] !== '' && data[12] !== undefined ? `${data[12]}%` : '';
+
+      extraDetails.innerHTML = `
+        <h2 class="expanded-title">${rankText} - ${data[3]}</h2>
+        ${modeBlock}
+        ${createInfoRow(['Order Beaten', 'Level ID'], [chrono, data[20]])}
+        ${createInfoRow(
+          ['PGDDL', 'GDDL', 'PEMON', 'Enjoyment'],
+          [data[5], data[6], data[7], data[9]]
+        )}
+        ${createInfoRow(
+          ['Date Beat', 'Attempt Count', 'Worst Fail'],
+          [dateBeat, data[11], worstFail]
+        )}
+        ${createInfoRow(['Gameplay Score', 'Deco Score', 'Song Score'], [
+          data[13],
+          data[14],
+          data[15],
+        ])}
+      `;
+
+      levelDiv.appendChild(extraDetails);
+
+      levelDiv.addEventListener('click', () => {
+        levelDiv.classList.toggle('expanded');
+      });
+
+      return levelDiv;
+    }
+
+    // Utility: parse number or return null for invalid
+    function parseNum(value) {
+      if (
+        value === '' ||
+        value === 'N/A' ||
+        value === 'U' ||
+        value === undefined ||
+        value === null
+      )
+        return null;
+      const num = Number(value);
+      return isNaN(num) ? null : num;
+    }
+
+    function sortLevels(levels, key) {
+      return levels.slice().sort((a, b) => {
+        let valA, valB;
+        switch (key) {
+          case 'rank':
+            valA = parseNum(a[1]);
+            valB = parseNum(b[1]);
+            return (valA ?? Infinity) - (valB ?? Infinity);
+          case 'enjoyment':
+            valA = parseNum(a[9]);
+            valB = parseNum(b[9]);
+            return (valB ?? -Infinity) - (valA ?? -Infinity); // descending
+          case 'order':
+            valA = parseNum(a[18]);
+            valB = parseNum(b[18]);
+            return (valA ?? Infinity) - (valB ?? Infinity);
+          case 'gddl':
+            valA = parseNum(a[6]);
+            valB = parseNum(b[6]);
+            return (valA ?? Infinity) - (valB ?? Infinity);
+          case 'pemon':
+            valA = parseNum(a[7]);
+            valB = parseNum(b[7]);
+            return (valA ?? Infinity) - (valB ?? Infinity);
+          case 'worstfail':
+            valA = parseNum(a[12]);
+            valB = parseNum(b[12]);
+            return (valA ?? Infinity) - (valB ?? Infinity);
+          default:
+            return 0;
+        }
+      });
+    }
+
+    function renderLevels(levels) {
+      const container = document.getElementById('levels');
+      container.innerHTML = '';
+      levels.forEach((data) => {
+        const levelDiv = buildLevelDiv(data);
+        container.appendChild(levelDiv);
+      });
+    }
+
+    // Tabs event listeners
+    document.querySelectorAll('.tab').forEach((tab) => {
+      tab.addEventListener('click', () => {
+        document.querySelectorAll('.tab').forEach((t) => t.classList.remove('active'));
+        tab.classList.add('active');
+        const sortKey = tab.getAttribute('data-sort');
+        const sorted = sortLevels(levelsData, sortKey);
+        renderLevels(sorted);
+      });
+    });
+
     async function fetchData() {
       const sheetId = '1jyql2Wzlho2N6cU7Ja45bCXgmeT_CdQM2gddff8wfzM';
       const sheetName = 'The Sheet';
@@ -102,85 +349,20 @@
         const response = await fetch(url);
         const text = await response.text();
         const json = JSON.parse(text.substring(47).slice(0, -2));
-        const rows = json.table.rows;
+        levelsData = json.table.rows.map((row) =>
+          row.c.map((cell) => (cell ? cell.v : ''))
+        );
 
-        const levelsContainer = document.getElementById('levels');
-        rows.forEach(row => {
-          const data = row.c.map(cell => (cell ? cell.v : ''));
-
-          const levelDiv = document.createElement('div');
-          levelDiv.className = 'level';
-
-          const levelRow = document.createElement('div');
-          levelRow.className = 'level-row';
-
-          const img = document.createElement('img');
-          img.src = data[19];
-          img.alt = data[3];
-          img.className = 'thumbnail';
-
-          const mainDetails = document.createElement('div');
-          mainDetails.className = 'details';
-          mainDetails.innerHTML = `
-            <h2 title="#${data[1]} - ${data[3]}">#${data[1]} - ${data[3]}</h2>
-            <p><em>by: ${data[4]}</em></p>
-          `;
-
-          levelRow.appendChild(img);
-          levelRow.appendChild(mainDetails);
-          levelDiv.appendChild(levelRow);
-
-          const extraDetails = document.createElement('div');
-          extraDetails.className = 'level-details';
-
-          const formatDate = (dateStr) => {
-            const match = /Date\((\d+),(\d+),(\d+)\)/.exec(dateStr);
-            if (!match) return '';
-            const [ , year, month, day ] = match.map(Number);
-            const date = new Date(year, month, day);
-            return date.toLocaleDateString('en-US', {
-              year: 'numeric', month: 'long', day: 'numeric'
-            });
-          };
-
-          const createInfoRow = (headers, values) => {
-            const valid = values.some((v) => v && v !== 'N/A');
-            if (!valid) return '';
-            const headerHTML = headers.map(h => `<div class="info-header">${h}</div>`).join('');
-            const valueHTML = values.map(v => `<div class="info-data">${v}</div>`).join('');
-            return `<div class="info-grid">${headerHTML}</div><div class="info-grid">${valueHTML}</div>`;
-          };
-
-          let modeText = [];
-          if (data[16] === true) modeText.push("Classic Mode");
-          if (data[17] === true) modeText.push("Platformer Mode");
-          const modeBlock = modeText.length > 0 ? `<div class='info-grid'><div class='info-header'>${modeText.join(' | ')}</div></div>` : '';
-
-          const dateBeat = formatDate(data[8]);
-          const chrono = data[18] ? `#${data[18]}` : '';
-          const worstFail = data[12] ? `${data[12]}%` : '';
-
-          extraDetails.innerHTML = `
-            <h2 class="expanded-title">#${data[1]} - ${data[3]}</h2>
-            ${modeBlock}
-            ${createInfoRow(["Chronological Order", "Level ID"], [chrono, data[20]])}
-            ${createInfoRow(["PGDDL", "GDDL", "PEMON", "Enjoyment"], [data[5], data[6], data[7], data[9]])}
-            ${createInfoRow(["Date Beat", "Attempt Count", "Worst Fail"], [dateBeat, data[11], worstFail])}
-            ${createInfoRow(["Gameplay Score", "Deco Score", "Song Score"], [data[13], data[14], data[15]])}
-          `;
-
-          levelDiv.appendChild(extraDetails);
-          levelsContainer.appendChild(levelDiv);
-
-          levelDiv.addEventListener('click', () => {
-            levelDiv.classList.toggle('expanded');
-          });
-        });
+        // Initially sort by rank and render
+        const sorted = sortLevels(levelsData, 'rank');
+        renderLevels(sorted);
       } catch (error) {
         console.error('Error fetching data:', error);
+        document.getElementById('levels').innerText = 'Failed to load data.';
       }
     }
 
     fetchData();
   </script>
 </body>
+</html>
