--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
           filtered.sort((a, b) => Number(b[6]) - Number(a[6])); // reversed order
           break;
         case 'pemon':
-          filtered.sort((a, b) => Number(b[7]) - Number(a[7]));
+          filtered.sort((a, b) => Number(a[7]) - Number(b[7])); // reversed order
           break;
         case 'order':
           filtered.sort((a, b) => Number(a[18]) - Number(b[18]));
